[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -236,15 +236,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recently_viewed_documents">最近檔案</string>
     <string name="details">細節</string>
     <string name="calendar">日曆</string>
+    <string name="warning_disallowed_sd_access">警告！這個應用沒有權限儲存這個檔案，所有變更將消失。此方無解，Android在此拒絕存取。</string>
     <string name="error_picture_selection">無相片被選擇、拍攝，或儲存</string>
     <string name="gallery_picture">相簿圖片</string>
     <string name="camera_picture">相機圖片</string>
+    <string name="enable_undo_and_redo_be_patient">啟用恢復和重做動作，僅適用於進階使用，請小心以免刪除重要資料。關閉再開啟編輯器可以清除歷史紀錄。</string>
     <string name="description">詳情</string>
     <string name="edit_picture">編輯圖片</string>
     <string name="math">數學</string>
     <string name="table_of_contents">目錄</string>
     <string name="miscellaneous">其他</string>
+    <string name="textaction">純文字 動作</string>
+    <string name="textactions">純文字 動作</string>
+    <string name="prefer_view">喜好 檢視</string>
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
+    <string name="popular_documents">偏好 文件</string>
     <string name="color">顏色</string>
     <string name="zero_width_space">零寬度空格</string>
     <string name="basic_color_scheme">基本顏色主題</string>
@@ -254,6 +260,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="type">檔案類型</string>
     <string name="folder">資料夾</string>
     <string name="keep_existing_file">- 不會複寫檔案與資料夾</string>
+    <string name="multiple_windows">多重視窗</string>
     <string name="font">字體</string>
     <string name="enter_or_select_format">輸入或選取格式</string>
     <string name="pick_date">選擇日期</string>
