--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">其他背景和项目</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">输入space-separated @context和 +project。这些都将在 todo.txt 插入对话框时显示。</string>
     <string name="infinite">无限的</string>
+    <string name="search_project">搜索项目</string>
+    <string name="search_context">搜索环境</string>
+    <string name="insert_project">插入项目</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">取消选择</string>
 </resources>
