--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Contextes et projets supplémentaires</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Entrez les @contexts séparés par des espaces et +projets. Ils seront toujours visibles dans les boîtes de dialogue d\'insertion todo.txt.</string>
     <string name="infinite">Infini</string>
+    <string name="search_project">Rechercher des projets</string>
+    <string name="search_context">Rechercher des contextes</string>
+    <string name="insert_project">Insérer des projets</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Désélectionner</string>
 </resources>
