--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Conjuntos y proyectos adicionales</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Introduzca @contexts y +projects separados por espacios. Estos siempre serán visibles en los diálogos de inserción de todo.txt.</string>
     <string name="infinite">Infinito</string>
+    <string name="search_project">Buscar proyectos</string>
+    <string name="search_context">Buscar contextos</string>
+    <string name="insert_project">Insertar proyectos</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Deseleccionar</string>
 </resources>
