--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">سياقات ومشاريع إضافية</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">أدخل @contexts و +مشاريع. ستكون هذه دائما مرئية في todo.txt إدخال الحوار.</string>
     <string name="infinite">لانهائي</string>
+    <string name="search_project">البحث عن المشاريع</string>
+    <string name="search_context">ابحث في السياقات</string>
+    <string name="insert_project">إدراج مشاريع</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">إلغاء التحديد</string>
 </resources>
