[ci skip] Update translations (Japanese)

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -413,4 +413,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">追加のコンテキストとプロジェクト</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">スペースで区切られた @contexts と +projects を入力してください。これらは常に todo.txt のダイアログで表示されます。</string>
     <string name="infinite">Infinite</string>
+    <string name="search_project">プロジェクトを検索</string>
+    <string name="search_context">検索コンテキスト</string>
+    <string name="insert_project">プロジェクトを挿入</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">選択を解除</string>
 </resources>
