--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Aanvullende contexten en projecten</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Voer spatie gescheiden @contexts en + projecten in. Deze zijn altijd zichtbaar bij todo.txt invoegen dialogen.</string>
     <string name="infinite">Oneindig</string>
+    <string name="search_project">Zoek projecten</string>
+    <string name="search_context">contexten zoeken</string>
+    <string name="insert_project">Projecten toevoegen</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Deselecteer</string>
 </resources>
