--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -414,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Dodatkowe konteksty i projekty</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Wprowadź oddzielone spacjami @contexts i +projekty. Będą one zawsze widoczne w oknie dialogowym wstawiania todo.txt.</string>
     <string name="infinite">Nieskończone</string>
+    <string name="search_project">Szukaj projektów</string>
+    <string name="search_context">Szukaj kontekstów</string>
+    <string name="insert_project">Wstaw projekty</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Odznacz</string>
 </resources>
