--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -98,7 +98,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help">Aiuto</string>
     <string name="todo_list">Elenco delle attività</string>
     <string name="task">Attività</string>
-    <string name="category">Categoria</string>
     <string name="context">Contesto</string>
     <string name="list">Lista</string>
     <string name="priority">Priorità</string>
@@ -147,10 +146,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contexts">Contesti</string>
     <string name="project">Progetto</string>
     <string name="projects">Progetti</string>
-    <string name="categories">Categorie</string>
     <string name="none">Nessuno</string>
     <string name="other">Altro</string>
-    <string name="alternative_naming">Nomi alternativi</string>
     <string name="empty_file">File vuoto</string>
     <string name="break_page_pdf_print">Fine pagina (PDF/Stampa)</string>
     <string name="underline">Sottolinea</string>
@@ -417,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Contesti e progetti aggiuntivi</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Inserisci @contesti e +progetti separati da spazi. Essi saranno sempre visibili nelle finestre di inserimento per todo.txt.</string>
     <string name="infinite">Infinito</string>
+    <string name="search_project">Cerca progetti</string>
+    <string name="search_context">Cerca contesti</string>
+    <string name="insert_project">Inserisci progetti</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Deseleziona</string>
 </resources>
