--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -98,7 +98,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help">Help</string>
     <string name="todo_list">Aan-Do lijst</string>
     <string name="task">Taak</string>
-    <string name="category">Categorie</string>
     <string name="context">Content</string>
     <string name="list">Lijst</string>
     <string name="priority">Prioriteit</string>
@@ -147,10 +146,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contexts">Contexten</string>
     <string name="project">Projecten</string>
     <string name="projects">Projecten</string>
-    <string name="categories">Categorieën</string>
     <string name="none">Geen</string>
     <string name="other">Overige</string>
-    <string name="alternative_naming">Alternatieve benaming</string>
     <string name="empty_file">Leeg bestand</string>
     <string name="break_page_pdf_print">Breek pagina (PDF/Afdrukken)</string>
     <string name="underline">Onderstrepen</string>
@@ -417,4 +414,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Aanvullende contexten en projecten</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Voer spatie gescheiden @contexts en + projecten in. Deze zijn altijd zichtbaar bij todo.txt invoegen dialogen.</string>
     <string name="infinite">Oneindig</string>
+    <string name="search_project">Zoek projecten</string>
+    <string name="search_context">contexten zoeken</string>
+    <string name="insert_project">Projecten toevoegen</string>
+    <string name="insert_context">Insert contexts</string>
+    <string name="deselect">Deselecteer</string>
 </resources>
