Many changes in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_context">Search contexts</string>
     <string name="insert_project">Insert projects</string>
     <string name="insert_context">Insert contexts</string>
+    <string name="filter_tasks">Filter tasks</string>
 </resources>
