--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -440,4 +440,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_today">Due today</string>
     <string name="due_future">Not due</string>
     <string name="completed">Completed</string>
+    <string name="back_to_filter">Back to filter tasks</string>
 </resources>
