--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,11 +434,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_context">Search contexts</string>
     <string name="insert_project">Insert projects</string>
     <string name="insert_context">Insert contexts</string>
-    <string name="filter_tasks">Filter tasks</string>
+    <string name="filter_todo">Filter todo</string>
     <string name="search_priority">Search priority</string>
     <string name="due_overdue">Overdue</string>
     <string name="due_today">Due today</string>
-    <string name="due_future">Not due yet</string>
+    <string name="due_future">Due in future</string>
     <string name="completed">Completed</string>
-    <string name="back_to_filter">Back to filter tasks</string>
+    <string name="back_to_filter">Back to filter</string>
 </resources>
